Mark as Collected option available for donation view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,6 @@
 .form-area label {
     width: 150px;
 }
-input[type="text"] {
-    color: #999;
+input[type="text"], select {
+    color: #999 !important;
 }
